Added a picture of me

--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>Johnathan Duong</title>
-  <meta name="description" content="Project Page">
-  <meta name="author" content="Project">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
 
 <body>
-  <script src="js/scripts.js"></script>
+
+<h1>Johnathan Duong</h1>
+<img src="0.jpg" alt="W3Schools.com" width="142" height="142">
+<p>Projects will go here.</p>
+
+
 </body>
 </html>
