--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 <h1>Johnathan Duong</h1>
-<img src="0.jpg" alt="W3Schools.com" width="142" height="142">
+<img src="0.jpg" width="142" height="142">
 <p>Projects will go here.</p>
 
 
