--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 <body>
 
 <h1>Johnathan Duong</h1>
-<img src="0.jpg" width="142" height="142">
-<p>Projects will go here.</p>
+<img src="pictureofme.jpg" width="142" height="142">
+<p>Projects:</p>
+<ul>
+	<li><a href="https://github.com/Cornwheat/Cache-Memory-Simulator">Cache Memory Simulator</a></li>
+	<li><a href="https://github.com/Cornwheat/Polymorphic-Python-Virus">Polymorphic Python Virus</a></li>
+	<li><a href="https://github.com/Cornwheat/Haiku-Generator">Prolog Haiku/Syllable Generator</a></li>
+	<li><a href="https://github.com/Cornwheat/Simple-Covert-Channel">Simple Covert Channel</a></li>
+</ul>
 
 
 </body>
