--- a/index.html
+++ b/index.html
@@ -170,13 +170,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <a href="http://www.cs.ucdavis.edu/blog/ecs-30-programming-problem-solving/">ECS 30</a>,  <a href="http://www.cs.ucdavis.edu/blog/ecs-40-software-development-object-oriented-programming/">ECS 40</a>, 
           <a href="http://www.cs.ucdavis.edu/blog/ecs-50-computer-organization-machine-dependent-programming/">ECS 50</a>, <a href="http://www.cs.ucdavis.edu/blog/ecs-60-data-structures-programming/">ECS 60</a>, 
           <a href="http://www.cs.ucdavis.edu/blog/ecs-150-operating-systems-system-programming/">ECS 150</a>, <a href="http://www.cs.ucdavis.edu/blog/ecs-154a-computer-architecture/">ECS 154a</a>, and 
-          <a href="http://www.cs.ucdavis.edu/blog/ecs-154b-computer-architecture/">ECS 154b</a>. Task necessitates the ability to break down complex abstract computer science concepts into simplified eadily understandable ideas.</p>
+          <a href="http://www.cs.ucdavis.edu/blog/ecs-154b-computer-architecture/">ECS 154b</a>. Task necessitates the ability to break down complex abstract computer science concepts into simplified easily understandable ideas.
+          </p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Graphic Designer / designsomething.com</b></h5>
-          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2010 - Mar 2012</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <h5 class="w3-opacity"><b>Logistical and Hacker Associate | <a href="http://sachacks.io/">SacHacks 2018</a></b></h5>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2018 - <span class="w3-tag w3-indigo w3-round">Current</span></h6>
+          <p>Handling logistical and hacking operations for SacHacks 2018, working with multiple teams to set system security, design coding challenges, manage budgeting, obtain sponsors, build workshops, and install network infrastructure for a 500+ person computer science venue.
+          </p>
+          <br>
         </div>
       </div>
 
