--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>January 2018 - <span class="w3-tag w3-indigo w3-round">Current</span></h6>
           <p>Handling logistical and hacking operations for SacHacks 2018, working with multiple teams to set system security, design coding challenges, manage budgeting, obtain sponsors, build workshops, and install network infrastructure for a 500+ person computer science venue.
           </p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Undergraduate Researcher | <a href="https://research.ucdavis.edu/">University of California, Davis</a></b></h5>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>September 2017 - December 2017</h6>
+          <p>Researched and developed software with a data mining team to webscrape popular Latin/South American websites such as MercadoLibre and Falabella to determine the technological development index of various Latin/South American countries for an 
+             <a href="https://www.cepal.org/en">United Nations General Secretariat Economic Commission of Latin America & Caribbean</a> commissioned project under Dr. Martin Hilbert. 
+             Report published by the <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3162864">Social Science Research Network</a> 
+             and presented at the  <a href="https://conferenciaelac.cepal.org/6/en">Sixth Ministerial Conference on the Information Society in Latin America and the Caribbean</a>.
+          </p>        
           <br>
         </div>
       </div>
@@ -186,21 +196,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Education</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>W3Schools.com</b></h5>
-          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Forever</h6>
-          <p>Web Development! All I need to know in one place</p>
+          <h5 class="w3-opacity"><b>University of California, Davis</b></h5>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - 2018</h6>
+          <p>Computer Science, Bachelor of Science | Grade Point Average: 3.114</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>London Business School</b></h5>
-          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
-          <p>Master Degree</p>
+          <h5 class="w3-opacity"><b>American River College | Santiago Canyon College</b></h5>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2016</h6>
+          <p>Computer Science | Grade Point Average: 3.323</p>
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>School of Coding</b></h5>
-          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
-          <p>Bachelor Degree</p><br>
+          <h5 class="w3-opacity"><b>Villa Park High School</b></h5>
+          <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2009 - 2013</h6>
+          <p>High School Diploma</p><br>
         </div>
       </div>
 
@@ -215,12 +225,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-indigo w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <a href="https://www.facebook.com/johnathan.cornwheat"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <a href="https://www.linkedin.com/in/johnathan-duong-b0b64b102/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
