--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ html,body,h1,h2,h3,h4,h5,h6 {
               <div class="w3-center w3-text-white">100%</div>
             </div>
           </div>
+		  <p><a href="weatherapp.html">Weather Application</a></p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
+          </div>
           <p><a href="https://github.com/Cornwheat/Haiku-Generator">Prolog Syllable/Haiku Generator</a></p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:90%">90%</div>
